[package]
name = "rust-webhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
url = "2.4.0"
worker = "0.0.17"
console_error_panic_hook = "0.1.6"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
